# OPD-TTT

./: .env.example  .gitignore  AGENTS.md  CREDITS  README.md  checkpoint_test_step_3000_20260618_145716.txt  checkpoint_test_step_9500_20260622_005530.txt  env_setup.sh  opencompass_compat.py  pyproject.toml  teacher_model_test_report.json
.kilo/plans/: 1782648734617-add-aime-ifeval-benchmarks.md
VeOmni/: .pre-commit-config.yaml  COMPATIBILITY_PATCHES.md  CONTRIBUTING.md  README.md  pyproject.toml  train.sh
VeOmni/.agents/: README.md  setup_agent.sh
VeOmni/tasks/: train_dit.py  train_text.py  train_text_dpo.py  train_text_rl.py  train_vlm.py  train_vlm_rl.py
VeOmni/veomni/: __init__.py
configs/baseline/: llama3_sc_1b5_baseline.yaml  llama3_sc_500m_baseline.yaml
configs/opdttt/: llama3_sc_1b5_opdttt.yaml  llama3_sc_1b5_stage1_pretrain.yaml  llama3_sc_1b5_stage2_opd.yaml  llama3_sc_1b5_stage2_sft.yaml  llama3_sc_500m_opdttt.yaml  llama3_sc_500m_stage1_5_ttt_continue.yaml  llama3_sc_500m_stage1_pretrain.yaml  llama3_sc_500m_stage2_opd.yaml  llama3_sc_500m_stage2_sft.yaml  qwen35_2b_opd.yaml  qwen35_2b_sft.yaml  qwen35_2b_ttt.yaml  qwen35_2b_ttt_eval.yaml  qwen35_2b_ttt_eval1200.yaml  qwen35_2b_ttt_eval1500.yaml  qwen35_2b_ttt_replay.yaml  qwen3_0.6b_ttt.yaml  smoke_test_500m_opdttt.yaml
configs/other/: llama3_longct.yaml  llama3_sc_500m_lact.yaml  qwen3_longct.yaml
configs/ttt/: llama3_sc_1b5_ttt.yaml  llama3_sc_500m_ttt.yaml
eval/config/: qwen35_2b_base.yaml  qwen35_2b_original_swa.yaml  qwen35_2b_step5000_ttt_off.yaml  qwen35_2b_step5000_ttt_on.yaml  qwen35_2b_trained.yaml  qwen35_9b.yaml
eval/scripts/: eval_hmmt.py  run_eval.sh
eval_config/: models.py  models_base.py  models_baseline.py  models_original_swa.py  models_step3000.py  ruler_128k.py  ruler_16k.py  ruler_256k.py  ruler_2k.py  ruler_32k.py  ruler_4k.py  ruler_64k.py  ruler_8k.py  ruler_base_16k.py  ruler_base_32k.py  ruler_baseline_2k.py  ruler_original_swa_16k.py  ruler_original_swa_2k.py  ruler_original_swa_32k.py  ruler_original_swa_4k.py  ruler_original_swa_8k.py
hf_models/: __init__.py
hf_models/hf_lact/: layer_lact_swiglu.py  modeling_lact.py  ttt_operation_fused_kernel.py
hf_models/hf_llama/: __init__.py  configuration_llama.py  modeling_llama.py  modeling_llama_opdttt.py  modeling_llama_opdttt_full.py
hf_models/hf_qwen3/: __init__.py  configuration_qwen3.py  modeling_qwen3.py  modeling_qwen3_opdttt.py  modeling_qwen3_opdttt_full.py
hf_models/hf_qwen3_5/: __init__.py  modeling_qwen3_5_opdttt.py  modeling_qwen3_5_opdttt_full.py
inference_model/: __init__.py
inference_model/hf_llama3/: __init__.py  configuration_llama.py  modeling_llama.py
scripts/: _model_loader.py  chat_ui.py  check_eval_samples.py  convert_dcp_to_hf.py  convert_parquet_to_jsonl.py  convert_parquet_to_qa_pairs.py  create_val_set.py  data_process.sh  download_prompt.sh  download_qwen3.py  download_watchdog.sh  env_setup_qwen35.sh  eval.sh  eval_aime.py  eval_aime_qwen3.py  eval_aime_qwen3_chat.py  eval_ifeval.py  eval_only.sh  eval_ppl_fast.py  eval_ppl_original.py  eval_ruler.py  eval_ruler_baseline.py  eval_ruler_oc.py  eval_ruler_opencompass.sh  eval_single.sh  eval_sliding_window_ppl.py  extract_teacher_embeddings.py  merge_dcp_to_hf.py  migrate_checkpoint.py  pack_pretrain_data.py  plot_figure.py  plot_ppl_single.py  plot_training_curve.py  prepare_original_swa_checkpoint.py  prepare_ot3_data.py  prepare_pretrain_data.py  prepare_sft_conversation.py  prepare_sft_data.py  prepare_ttt_eval_config.py  quick_generation_test.py  (+32 more)
tasks/: infer.py  train_opdttt.py  train_torch.py
(+143 files in other folders)
